worked on the hero page

--- a/index.html
+++ b/index.html
@@ -24,15 +24,21 @@
                    <br> safe and home-like environment!</br>
                 </p>
                 <p class="hero-p" id="sub-p">We can take care of your:</p>
-                <img class="pets" src="/Images/Dog-img.png" alt="Dog">
-                <img class="pets" src="/Images/cat_img.png" alt="cat">
-                <img class="pets" src="/Images/hamster_img.png" alt="Hamster">
-                <img class="pets" src="/Images/parrot_img.jpg" alt="Parrot">
-                <img class="pets" src="/Images/rabbit_img.png" alt="Rabbit">
 
-                <p>Drop off</p>
-                <p>Pick up</p>
-                <button id="btn">Search</button>
+             <div class="pet-cta">
+                <div class="pets"> <img src="/Images/Dog-img.png" alt="Dog"></div>
+                <div class="pets"><img  src="/Images/cat_img.png" alt="cat"></div>
+                <div class="pets"><img  src="/Images/hamster_img.png" alt="Hamster"></div>
+                <div class="pets"><img  src="/Images/parrot_img.jpg" alt="Parrot"></div>
+                <div class="pets"><img src="/Images/rabbit_img.png" alt="Rabbit"></div>
+             </div>
+                <div class="search"> 
+                    <p>Drop off</p>
+                    <p> | </p>
+                    <p>Pick up</p>
+                    <button id="btn">Search</button>
+            </div>
+               
             </div>
             <div class="right-col">
                 <nav>
