worked on the footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="pets"> <img src="/Images/Dog-img.png" alt="Dog"></div>
                 <div class="pets"><img  src="/Images/cat_img.png" alt="cat"></div>
                 <div class="pets"><img  src="/Images/hamster_img.png" alt="Hamster"></div>
-                <div class="pets"><img  src="/Images/parrot_img.jpg" alt="Parrot"></div>
+                <div class="pets"><img  src="/Images/parrot_img.png" alt="Parrot"></div>
                 <div class="pets"><img src="/Images/rabbit_img.png" alt="Rabbit"></div>
              </div>
                 <div class="search"> 
@@ -54,6 +54,28 @@
             </div>
 
         </section>
+        <section class="boxes">
+        <div class="box1">
+            <h2>Boarding</h2>
+            <p>We can take any pet for the short and long term</p>
+        </div>
+        <div class="box2">
+            <h2>Veterinary  ▶</h2>
+        </div>
+        <div class="box3">
+            <h2>Live video</h2>
+            <p>You can watch your pet 24/7</p>
+        </div>
+        <div class="box4">
+            <h2>Training</h2>
+            <p>Experienced coaches will adjust behavior</p>
+        </div>
+        <div class="box5">
+            <h2>Grooming</h2>
+            <p>Your pet will look like it's ready for the show</p>
+        </div>
+    </section>
+        
 
       </div>
 
