--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         </div>
         <div class="box2">
             <h2>Veterinary  ▶</h2>
+
+           
+            <!-- <img class="Vet" src="Images/image-removebg-preview.png" alt="Doctor with a dog"> -->
         </div>
         <div class="box3">
             <h2>Live video</h2>
